WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
283861
Hovered link text not highlighted outside of bounding box
https://bugs.webkit.org/show_bug.cgi?id=283861
Summary
Hovered link text not highlighted outside of bounding box
Robert
Reported
2024-11-30 18:21:15 PST
Created
attachment 473403
[details]
Screen recording To reproduce: Visit
https://www.miriamsuzanne.com
and scroll down to “in the feed” Hover over “aggregating my distributed self” Bug: the right end of the ‘f’, which hangs outside of the element’s bounding box, is not highlighted with the CSS’s hover style; it remains the same color as when it's not hovered. Expected behavior: as part of the hovered element, the entirety of the letter ‘f’ should change color, not just the part physically within the bounding box.
Attachments
Screen recording
(1.06 MB, video/mp4)
2024-11-30 18:21 PST
,
Robert
no flags
Details
Test reduction
(186 bytes, text/html)
2024-11-30 20:08 PST
,
alan
no flags
Details
Test reduction
(229 bytes, text/html)
2024-11-30 20:21 PST
,
alan
no flags
Details
Patch
(18.04 KB, patch)
2024-12-01 19:25 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(16.50 KB, patch)
2024-12-02 06:24 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(18.27 KB, patch)
2024-12-02 08:26 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
[fast-cq]Patch
(18.45 KB, patch)
2024-12-02 14:21 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2024-11-30 19:48:41 PST
I am able to reproduce this using WebKit ToT (
287180@main
), where as referenced video the edge of `f` is not colored properly.
Radar WebKit Bug Importer
Comment 2
2024-11-30 19:48:49 PST
<
rdar://problem/140739413
>
alan
Comment 3
2024-11-30 20:08:58 PST
Created
attachment 473404
[details]
Test reduction Thank you for filing this repaint issue!
alan
Comment 4
2024-11-30 20:21:57 PST
Created
attachment 473405
[details]
Test reduction This looks to be about horizontal glyph overflow.
alan
Comment 5
2024-12-01 19:25:52 PST
Created
attachment 473409
[details]
Patch
alan
Comment 6
2024-12-02 06:24:50 PST
Created
attachment 473423
[details]
Patch
alan
Comment 7
2024-12-02 08:26:02 PST
Created
attachment 473425
[details]
Patch
alan
Comment 8
2024-12-02 14:21:18 PST
Created
attachment 473432
[details]
[fast-cq]Patch
EWS
Comment 9
2024-12-02 20:48:07 PST
Committed
287256@main
(395507eacec4): <
https://commits.webkit.org/287256@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473432
[details]
.
alan
Comment 10
2024-12-17 13:59:11 PST
This got reverted here:
https://commits.webkit.org/287965@main
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug