Hovered link text not highlighted outside of bounding box https://bugs.webkit.org/show_bug.cgi?id=283861 <rdar://problem/140739413>

Reviewed by Antti Koivisto.

Add support for horizontal glyph overflow.

Make TextUtil::enclosingGlyphBounds return both ascent/descent and horizontal overflow.
(FIXME: With complex codepath, we may need to go through (measure) the entire content
and not just he first/last characters).

* LayoutTests/fast/repaint/glyph-horizontal-overflow-repaint-expected.txt: Added.
* LayoutTests/fast/repaint/glyph-horizontal-overflow-repaint.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::adjustInlineBoxHeightsForLineBoxContainIfApplicable):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::appendTextDisplayBox):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::enclosingGlyphBoundsForRunWithIterator):
(WebCore::Layout::TextUtil::enclosingGlyphBounds):
(WebCore::Layout::TextUtil::enclosingGlyphBoundsForText): Deleted.
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.h:

text-letter-spacing: progression, still not 100% correct though.
Canonical link: https://commits.webkit.org/287256@main